reliability-v2/content/network-policy/00_banp_deny-workload.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: BaselineAdminNetworkPolicy
metadata:
  name: default
spec:
  subject:
    namespaces:
      matchExpressions:
      - key: group
        operator: In
        values: ["dev-test","dev-prod","dev-cronjob"]    
  ingress:
  - name: "deny-all-ingress-from-any-ns"
    action: "Allow"
    from:
    - namespaces: {}
  # egress:
  # - name: "deny-all-egress-to-any-ns"
  #   action: "Deny"
  #   to:
  #   - namespaces:
  #       namespaceSelector: {}
