reliability-v2/content/network-policy/04_anp_allow-traffic-dev-test-p30.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: allow-traffic-dev-test-p30
spec:
  priority: 30
  subject:
    namespaces:
      matchLabels:
        group: dev-test
  ingress:
  - name: "allow-all-ingress-from-dev-test"
    action: "Allow"
    from:
    - namespaces:
        matchLabels:
          group: dev-test
  egress:
  - name: "deny-all-egress-to-dev-test"
    action: "Deny"
    to:
    - namespaces:
        matchLabels:
          group: dev-test
